# static-site-generator

./: .gitignore  README.md  build.sh  main.sh  pyproject.toml  template.html  test.sh
.github/workflows/: deploy.yml
content/: index.md
content/blog/glorfindel/: index.md
content/blog/majesty/: index.md
content/blog/tom/: index.md
content/contact/: index.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  QUICKSTART.md
src/: block_markdown.py  copystatic.py  generate_page.py  htmlnode.py  inline_markdown.py  main.py  test_block_markdown.py  test_generate_page.py  test_htmlnode.py  test_inline_markdown.py  test_textnode.py  textnode.py
